Fix component widths to prevent layout shifts

--- a/demo/src/app/view/demo-view/parts/demo-parts-center/demo-parts-center.scss
+++ b/demo/src/app/view/demo-view/parts/demo-parts-center/demo-parts-center.scss
@@ -6,6 +6,7 @@
 }
 
 .message {
+  width: 20rem;
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 2.5rem;
@@ -19,6 +20,7 @@
 }
 
 .progress {
+  width: 20rem;
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 2.5rem;
