--- a/demo/src/app/view/demo-view/parts/demo-parts-select/demo-parts-select.scss
+++ b/demo/src/app/view/demo-view/parts/demo-parts-select/demo-parts-select.scss
@@ -1,5 +1,6 @@
 .select-side {
-  min-width: 250px;
+  width: 250px;
+  flex: 0 0 250px;
   margin-right: 3vw;
   background: #fff;
   border-radius: 1.4rem;
@@ -23,6 +24,7 @@
 }
 
 select {
+  width: 100%;
   padding: 0.6rem 1rem;
   border-radius: 0.9rem;
   border: 1px solid #cbd5e1;
